src/test/deca/syntax/valid/test_parser_empty_class.deca
// Description:
//    Minimalistic program to test an empty class.
//
// Results:
//    None
//
// History:
//    Created on 13/1/2025

class Car {
    
}
