src/test/deca/syntax/invalid/notYetImplemented/test_parser_assign_without_type.deca
// Description:
//    Minimalistic program to test the creation of a var without type.
//
// Results:
//    None
//
// History:
//    Created on 13/1/2025

class Car{
    x = 42;
}